# minioidc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  readme.md  server.py
minioidc/: __init__.py
tests/: test_minioidc.py
