[tool.poetry]
name = "oida-cli"
version = "1.0.0"
description = "Example client that implements OpenID Connect confidential client using code flow"
authors = ["Dima Tisnek <dimaqq@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
PyJWT = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
