[tool.poetry]
name = "oida-cli"
version = "1.0.0"
description = "Example client that implements OpenID Connect confidential client using code flow"
authors = ["Dima Tisnek <dimaqq@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
PyJWT = {extras = ["crypto"], version = "^2.0.1"}
uvicorn = "^0.13.3"
yarl = "^1.6.3"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
mypy = "^0.800"

[tool.poetry.scripts]
start = "poetry run uvicorn server:app --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
