[tool.poetry]
name = "minioidc"
version = "1.0.0"
description = "Example client that implements OpenID Connect confidential client using code flow"
authors = ["Dima Tisnek <dimaqq@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/HENNGE/minioidc"
repository = "https://github.com/HENNGE/minioidc"
documentation = "https://minioidc.readthedocs.io/en/latest/"
keywords = ["asyncio"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: AsyncIO",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
PyJWT = {extras = ["crypto"], version = "^2.0.1"}
uvicorn = "^0.13.3"
yarl = "^1.6.3"
httpx = "^0.16.1"
typeguard = "^2.11.1"

[tool.poetry.dev-dependencies]
mypy = "^0.800"
pytest-asyncio = "^0.14.0"
pytest = "^6.2.2"
ipython = "^7.21.0"
async-asgi-testclient = "^1.4.6"
pytest-xdist = "^2.2.1"

[tool.poetry.scripts]
start = "server:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
